# solana-mev-bot

./: .env  Cargo.toml  README.md  config.example.toml  package.json
docs/: changelog.md
src/: arbitrage.rs  main.rs
